@@ -7,6 +7,7 @@ Enhancements:
   (parsing terminates at first non-option encountered)
 Changes:
 - io: remove HX_REALPATH_SYMLINK
+- time: rename HX_diff_timespec to HX_timespec_sub (old ABI kept)
 Enhancements:
 - option: add HXTYPE_SIZE_T
 
